editor-components/call_to_action/call_to_action4/call_to_action4.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;
.container {
  .max-content {
    .content {
      display: flex;
      gap: var(--composer-gap-md);
      .left-page {
        display: flex;
        flex-direction: column;
        flex: 1;
        gap: var(--composer-gap-lg);
        .list-container {
          margin: 0px;
          .list {
            display: flex;
            gap: var(--composer-gap-md);
            align-items: center;
            .description {
              display: flex;
              align-items: center;
              color: var(--composer-font-color-primary);
              width: fit-content;
              text-align: left;
              margin: 0;
            }
            .icon-container {
              background-color: var(--composer-primary-color);
              padding: var(--composer-gap-xs);
              border-radius: var(--composer-border-radius-full);
              align-items: center;
              display: flex;
              height: fit-content;
              width: fit-content;

              &.no-bg {
                background-color: transparent;

                .icon {
                  color: var(--composer-primary-color);
                }
              }

              .icon {
                color: var(--composer-font-color-secondary);
                width: 10px;
                height: 10px;
                font-size: 10px;
                object-fit: contain;
              }
            }
          }
        }

        .buttons {
          display: flex;
          gap: var(--composer-gap-sm);
          justify-content: var(--composer-content-alignment, flex-start);
          .button {
            content: "";
            .button-text {
              content: "";
            }
          }
        }
      }
      &.has-image {
        .left-page {
          .header {
            .subtitle,
            .title,
            .description {
              text-align: left;
              margin-left: 0;
            }
          }
          .buttons {
            justify-content: flex-start;
          }
        }
      }
      .right-page {
        flex: 1;
        position: relative;
        .image-container {
          position: absolute;
          top: 0px;
          right: 0px;
          display: flex;
          justify-content: center;
          align-items: center;
          height: 100%;
          width: 100%;
          .image {
            object-fit: cover;
            height: 100%;
            width: 100%;
            border-radius: var(--composer-border-radius-xs);
          }
          .overlay {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            background: var(--composer-overlay-color);
            z-index: 0;
            pointer-events: none;
            border-radius: var(--composer-border-radius-xs);
          }
        }
      }
    }
  }
}
@container (max-width: #{$composer-phone-width}) {
  .container {
    .max-content {
      .content {
        flex-direction: column;
        .right-page {
          min-height: 400px;
        }
      }
    }
  }
}

